v9
  # Course section 10: ECS Implementation
    + Added Pool class (for storing a pool of components contigously)
    + Started creating the Registry class (that will control the ECS)
    + Added Entity creation and management to the Registry class
    + Added templates to manage components in the Registry class: AddComponent,
      RemoveComponent, HasComponent
    + Added System functions
    (section completed)
v8
  # Course section 9: ECS Design
    + Made the initial skeleton the ECS main file and folder structure
    + Added sketch of Transform component
    + Added sketch of Movement system
    + Added Signature
    + Added Template for System::RequireComponent
    + Component setup with parent (base/interface) class to handle id
    + Added implementation of System functions: AddEntityToSystem, 
      RemoveEntityFromSystem, GetSystemEntities, GetComponentSignature
    (section completed)
v7
  # Course section 8: Organizing Game Objects
    (section completed)

v6
  # Course section 7: Files & Folder Structure
    + Added subfolders in the src folder
    + Added variables to the Makefile
    (section completed)
v5
  # Course section 6: Logger
    + Added a Logger class for logging with Log() and Err() functions
    (section completed)

v4
  # Course section 5: Fixing the Game Time Step
    + Added player position and velocity vectors
    + Implemented fixed time step in the Update() function by using a while 
      loop to cap the framerate
    + Improved the fixed time step by replacing the while loop with the built
      in SDL function SDL_Delay()
    + Added variable delta-time and implemented position updates based on 
      delta-time factor
    (section completed)
v3
  # Course section 4: Rendering SDL Objects
    + Added drawing of a test rectangle using the built-in SDL function
    + Added test rendering of a png image
    (section completed)

v2
  # Course section 3: Displaying the Game Window
    + Created Game.h/Game.cpp with the Game class