@@ -1,7 +1,6 @@
 #ifndef TRANSFORMCOMPONENT_H
 #define TRANSFORMCOMPONENT_H
 
-#include "glm/fwd.hpp"
 #include <glm/glm.hpp>
 
 struct TransformComponent {
@@ -9,7 +8,7 @@ struct TransformComponent {
     glm::vec2 scale;
     double rotation;
 
-    TransformComponent(glm::vec2 positon = glm::vec2(0, 0), glm::vec2 scale = glm::vec2(1, 1), double rotation = 0.0) {
+    TransformComponent(glm::vec2 position = glm::vec2(0, 0), glm::vec2 scale = glm::vec2(1, 1), double rotation = 0.0) {
         this->position = position;
         this->scale = scale;
         this->rotation = rotation;
