@@ -1,9 +1,8 @@
 #ifndef GAME_H
 #define GAME_H
 
+#include "../ECS/ECS.h"
 #include <SDL2/SDL.h>
-#include <SDL2/SDL_image.h>
-#include <glm/glm.hpp>
 
 const int FPS = 60;
 const int MILLISECS_PER_FRAME = 1000 / FPS;
@@ -15,13 +14,15 @@ class Game {
         SDL_Window* window;
         SDL_Renderer* renderer;
 
+        std::unique_ptr<Registry> registry;
+
     public:
         Game();
         ~Game();
         void Initialize();
         void Run();
-        void ProcessInput();
         void Setup();
+        void ProcessInput();
         void Update();
         void Render();
         void Destroy();
