@@ -1,4 +1,3 @@
-#include <iostream>
 #include "./Game/Game.h"
 
 int main(int argc, char* argv[]) {
